tests/files/ok/StringInterpolation3.krna


fn f() {
    let b = 1
    let c = "A"
    let a = '$b$c'
    a = '$b $c'
    a = '\$caa$b'
    a = '\$caa\$w'
}
