tests/files/fail/StringInterpolation3.krna


fn f() {
    let c = "A"
    let a = '$b $c'
}
